syntax = "proto3";

package users.v1;

import "google/protobuf/empty.proto";

service UserRegister {
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {};
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {};
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {};
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {};
    rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {};
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {};
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {};
}

message User {
    int64 id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string phone = 5;
    string address = 6;
    string city = 7;
    string zip_code = 8;
    UserStatus status = 9;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    User user = 1;
}

message ListUsersResponse {
    repeated User user = 1;
}

message UserStatus {
    int64 id = 1;
    string name = 2;
}

message ListUsersRequest {

}

message CreateUserRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    string phone = 5;
    string address = 6;
    string city = 7;
    string zip_code = 8;
}

message CreateUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    int64 id = 1;
    string email = 2;
    string password = 3;
    string first_name = 4;
    string last_name = 5;
    string phone = 6;
    string address = 7;
    string city = 8;
    string zip_code = 9;
    int64 status_id = 10;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    int64 id = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    string token = 1;
    string refresh_token = 2;
}

message RefreshTokenRequest {
    string email = 1;
    string refresh_token = 2;
}

message RefreshTokenResponse {
    string token = 1;
}